--- a/aamsign/templates/index.html
+++ b/aamsign/templates/index.html
@@ -67,18 +67,16 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="{% static 'images/general/index/best_seller (3).jpg' %}"
+                    <img src="{% static 'images/light-boxes/1.jpg' %}"
                         alt="Light Box">
                 </div>
                 <div class="product-info">
-                    <h3>Blade Signs</h3>
-                    <p>Double-sided visibility for foot traffic.</p>
+                    <h3>Light Boxes</h3>
+                    <p>Bright, durable, and eye-catching display solutions.</p>
                 </div>
             </div>
         </div>
     </section>
-
-
 
     <!-- Our Work Showcase (Vertical Scrolling) -->
     <section class="our-work-section">
